--- a/index.html
+++ b/index.html
@@ -286,7 +286,8 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="mt-0">Locate us</h2>
                         <hr class="divider divider-light" />
-                        <div id="map"></div>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3859.791850985061!2d121.0536310757903!3d14.667750775427743!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397b7fa7a114a29%3A0x682a1478d6b8a3bc!2sMJeshter%20fitness%20gym!5e0!3m2!1sfil!2sph!4v1689322374552!5m2!1sfil!2sph" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
                     </div>
                 </div>
             </div>
