--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 
         <!-- Footer-->
         <footer class="bg-light py-5">
-            <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy; 2023 - Kyle Andrae</div></div>
+            <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy; 2023 - MJESHTER FITNESS GYM</div></div>
         </footer>
         </div>
         <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAAAGmk1kRMZXGOxzfDQVEb2AkdByEhPv4&callback=initMap"></script>
