--- a/index.html
+++ b/index.html
@@ -66,6 +66,42 @@
                     height: 600px;
                   }
 
+                  #quote {
+                    background-image: url('assets/gym.jpg');
+                    background-size: cover;
+                    background-position: center;
+                    background-repeat: no-repeat;
+                }
+                #quote {
+                    position: relative;
+                }
+        
+                #quote::before {
+                    content: "";
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                    background-color: rgba(0, 0, 0, 0.5); /* Adjust the opacity as needed */
+                }
+        
+                #quote img {
+                    position: relative;
+                    z-index: 1;
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+
+                #quote .text {
+                    position: relative;
+                    z-index: 2;
+                    color: white;
+                    font-size: 24px; /* Adjust the font size as needed */
+                    font-weight: bold;
+                }
+
         </style>
 
     </head>
@@ -293,10 +329,11 @@
             </div>
         </section>
 
-        <section class="page-section bg-primary text-dark">
+        <section class="page-section bg-primary text-dark" id="quote">
             <div class="container px-4 px-lg-5 text-center">
-                <h2 class="mb-4 fst-italic">
-                    "Your commitment in the gym today paves the way for the strength and triumph you'll embrace tomorrow."</h2>
+                    <div class="text">
+                        <h2 class="mb-4 fst-italic text-white">"Your commitment in the gym today paves the way for the strength and triumph you'll embrace tomorrow."</h2>
+                    </div>   
             </div>
         </section>
 
