--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
                       background-position: center;
                     }
                   }
+                  
         </style>
 
     </head>
@@ -383,24 +384,41 @@
                         <hr class="divider divider-light" />
                         <div class="col-12">
                             <div class="row">
-                                <!-- <div class="col-6">
-                                  <div class="inquiry-container">
-                                    <form>
-                                      <input type="text" id="name" name="name" placeholder="Your Name" required>
-                                      <input type="text" id="email" name="email" placeholder="Your Email" required>
-                                      <textarea id="message" name="message" placeholder="Your Message" required></textarea>
-                                      <input type="submit" value="Submit" class="bg-dark text-white">
+                                <div class="container px-5 my-5">
+                                    <form id="contactForm" data-sb-form-api-token="ff071942-042e-4aab-abd5-16ad1b31838f">
+                                        <div class="mb-3">
+                                            <label class="form-label" for="fullName">Full Name</label>
+                                            <input class="form-control" id="fullName" type="text" placeholder="Full Name" data-sb-validations="required" />
+                                            <div class="invalid-feedback" data-sb-feedback="fullName:required">Full Name is required.</div>
+                                        </div>
+                                        <div class="mb-3">
+                                            <label class="form-label" for="emailAddress">Email Address</label>
+                                            <input class="form-control" id="emailAddress" type="email" placeholder="Email Address" data-sb-validations="required,email" />
+                                            <div class="invalid-feedback" data-sb-feedback="emailAddress:required">Email Address is required.</div>
+                                            <div class="invalid-feedback" data-sb-feedback="emailAddress:email">Email Address Email is not valid.</div>
+                                        </div>
+                                        <div class="mb-3">
+                                            <label class="form-label" for="message">Message</label>
+                                            <textarea class="form-control" id="message" type="text" placeholder="Message" style="height: 10rem;" data-sb-validations="required"></textarea>
+                                            <div class="invalid-feedback" data-sb-feedback="message:required">Message is required.</div>
+                                        </div>
+                                        <div class="d-none" id="submitSuccessMessage">
+                                            <div class="text-center mb-3">
+                                                <div class="fw-bolder">Form submission successful!</div>
+                                                <p>To activate this form, sign up at</p>
+                                                <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
+                                            </div>
+                                        </div>
+                                        <div class="d-none" id="submitErrorMessage">
+                                            <div class="text-center text-danger mb-3">Error sending message!</div>
+                                        </div>
+                                        <div class="d-grid">
+                                            <button class="btn btn-primary btn-lg disabled" id="submitButton" type="submit">Submit</button>
+                                        </div>
                                     </form>
-                                    <div class="email-icon"></div>
-                                  </div>
                                 </div>
-                                <div class="col-6">
-                                    <div class="inquiry-container">
-                                        <img src="assets/email.png" alt="" srcset="" height="50%" width="50%">
-                                    </div>
-                                </div> -->
-                                <h1 class="text-white">IN DEVELOPMENT</h1>
-                              </div>
+                                <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+                            </div>
                         </div>
                     </div>
                 </div>
