--- a/index.html
+++ b/index.html
@@ -376,16 +376,16 @@
         </section>
 
         <!-- About-->
-        <section class="page-section bg-primary" id="inquiry">
-            <div class="container px-4 px-lg-5">
+        <section class="page-section bg-dark" id="inquiry">
+            <div class="container px-4 px-lg-5" >
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 text-center">
                         <h2 class="text-white mt-0">Inquiry</h2>
                         <hr class="divider divider-light" />
                         <div class="col-12">
-                            <div class="row">
-                                <div class="container px-5 my-5">
-                                    <form id="contactForm" data-sb-form-api-token="ff071942-042e-4aab-abd5-16ad1b31838f">
+                            <div class="row mb-3">
+                                <div class="container px-5 my-5 text-start text-white" style="border: 5px solid white;">
+                                    <form id="contactForm" data-sb-form-api-token="ff071942-042e-4aab-abd5-16ad1b31838f" class="my-5">
                                         <div class="mb-3">
                                             <label class="form-label" for="fullName">Full Name</label>
                                             <input class="form-control" id="fullName" type="text" placeholder="Full Name" data-sb-validations="required" />
@@ -405,8 +405,6 @@
                                         <div class="d-none" id="submitSuccessMessage">
                                             <div class="text-center mb-3">
                                                 <div class="fw-bolder">Form submission successful!</div>
-                                                <p>To activate this form, sign up at</p>
-                                                <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
                                             </div>
                                         </div>
                                         <div class="d-none" id="submitErrorMessage">
