add border radius

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                         <hr class="divider divider-light" />
                         <div class="col-12">
                             <div class="row mb-3">
-                                <div class="container px-5 my-5 text-start text-white" style="border: 5px solid white;">
+                                <div class="container px-5 my-5 text-start text-white" style="border: 5px solid white; border-radius: 15px;">
                                     <form id="contactForm" data-sb-form-api-token="ff071942-042e-4aab-abd5-16ad1b31838f" class="my-5">
                                         <div class="mb-3">
                                             <label class="form-label" for="fullName">Full Name</label>
