--- a/index.html
+++ b/index.html
@@ -263,38 +263,65 @@
                     </div>
                 </div>
                 <div class="row g-0">
-                    <div class="col-lg-4 col-sm-6 mx-auto">
-                        <a class="portfolio-box" href="assets/com1.jpg" title="">
-                            <img class="img-fluid" src="assets/com1.jpg" alt="..." />
-                        </a>
-                    </div>
-                    <div class="col-lg-4 col-sm-6 mx-auto">
-                        <a class="portfolio-box" href="assets/com2.jpg" title="">
-                            <img class="img-fluid" src="assets/com2.jpg" alt="..." />
-
-                        </a>
-                    </div>
-                    <div class="col-lg-4 col-sm-6 mx-auto">
-                        <a class="portfolio-box" href="assets/com3.jpg" title="">
-                            <img class="img-fluid" src="assets/com3.jpg" alt="..." />
-                        </a>
-                    </div>
-                    <div class="col-lg-4 col-sm-6 mx-auto">
-                        <a class="portfolio-box" href="assets/com4.jpg" title="">
-                            <img class="img-fluid" src="assets/com4.jpg" alt="..." />
-
-                        </a>
-                    </div>
-                    <div class="col-lg-4 col-sm-6 mx-auto">
-                        <a class="portfolio-box" href="assets/com5.jpg" title="">
-                            <img class="img-fluid" src="assets/com5.jpg" alt="..." />
-
-                        </a>
-                    </div>
-                    <div class="col-lg-4 col-sm-6 mx-auto">
-                        <a class="portfolio-box" href="assets/com7.jpg" title="">
-                            <img class="img-fluid" src="assets/com7.jpg" alt="..." />
-                        </a>
+                    <div id="portfolio">
+                        <div class="container-fluid p-0">
+                            <div class="row g-0">
+                                <div class="col-lg-4 col-sm-6">
+                                    <a class="portfolio-box" href="assets/com1.jpg">
+                                        <img class="img-fluid" src="assets/com1.jpg" alt="..." />
+                                        <div class="portfolio-box-caption">
+                                            <div class="project-category text-white-50"></div>
+                                            <div class="project-name">View</div>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="col-lg-4 col-sm-6">
+                                    <a class="portfolio-box" href="assets/com2.jpg">
+                                        <img class="img-fluid" src="assets/com2.jpg" alt="..." />
+                                        <div class="portfolio-box-caption">
+                                            <div class="project-category text-white-50"></div>
+                                            <div class="project-name">View</div>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="col-lg-4 col-sm-6">
+                                    <a class="portfolio-box" href="assets/com3.jpg">
+                                        <img class="img-fluid" src="assets/com3.jpg" alt="..." />
+                                        <div class="portfolio-box-caption">
+                                            <div class="project-category text-white-50"></div>
+                                            <div class="project-name">View</div>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="col-lg-4 col-sm-6">
+                                    <a class="portfolio-box" href="assets/com4.jpg">
+                                        <img class="img-fluid" src="assets/com4.jpg" alt="..." />
+                                        <div class="portfolio-box-caption">
+                                            <div class="project-category text-white-50"></div>
+                                            <div class="project-name">View</div>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="col-lg-4 col-sm-6">
+                                    <a class="portfolio-box" href="assets/com5.jpg">
+                                        <img class="img-fluid" src="assets/com5.jpg" alt="..." />
+                                        <div class="portfolio-box-caption">
+                                            <div class="project-category text-white-50"></div>
+                                            <div class="project-name">View</div>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="col-lg-4 col-sm-6">
+                                    <a class="portfolio-box" href="assets/com7.jpg">
+                                        <img class="img-fluid" src="assets/com7.jpg" alt="..." />
+                                        <div class="portfolio-box-caption p-3">
+                                            <div class="project-category text-white-50"></div>
+                                            <div class="project-name">View</div>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
