update operation hours

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                         <div class="d-flex justify-content-center">
                             <div class="card text-center custom-card">
                                 <h3>GYM</h3>
-                                <p>Everyday from 9am-10pm</p>
+                                <p>8am-10pm Daily</p>
                                 <p class="price">P80/session</p>
                                 <p class="price">P900/month</p>
                             </div>
@@ -342,7 +342,7 @@
                                 <div class="card text-center custom-card">
                                     <img src="assets/item1.jpg" alt="Item 1" height="450">
                                     <p>Muscle Shirt</p>
-                                    <p class="price">P250.00</p>
+                                    <p class="price">P400.00</p>
                                 </div>
                             </div>
                         </div>
@@ -352,7 +352,7 @@
                                 <div class="card text-center custom-card">
                                     <img src="assets/item2.jpg" alt="Item 1" height="450">
                                     <p>Muscle Shirt</p>
-                                    <p class="price">P250.00</p>
+                                    <p class="price">P400.00</p>
                                 </div>
                             </div>
                         </div>
@@ -362,7 +362,7 @@
                                 <div class="card text-center custom-card">
                                     <img src="assets/item3.jpg" alt="Item 1" height="450">
                                     <p>Muscle Shirt</p>
-                                    <p class="price">P250.00</p>
+                                    <p class="price">P400.00</p>
                                 </div>
                             </div>
                         </div>
@@ -372,7 +372,7 @@
                                 <div class="card text-center custom-card">
                                     <img src="assets/item4.jpg" alt="Item 1" height="450">
                                     <p>Muscle Shirt</p>
-                                    <p class="price">P250.00</p>
+                                    <p class="price">P400.00</p>
                                 </div>
                             </div>
                         </div>
